# KittehBot

./: .clang-format  .gitmodules  CMakeLists.txt  Jenkinsfile  build.sh  jenkins.py  main.cc  time.py
appimage/: KittehBot++.desktop
cmake/: sysconf.h.cmake
include/bot_commands/: about.hpp  ban.hpp  cookies.hpp  ddg.hpp  fox.hpp  ping.hpp  profile.hpp  serverinfo.hpp  set.hpp  shell.hpp  test.hpp  translate.hpp  userinfo.hpp  version.hpp
include/bot_utils/: bothelper.hpp  chat.hpp  shell.hpp  string_utils.hpp
